invert colours - clickable changed to time prompt
changed clickable text to timed prompt for making page invert colours

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- WEBSITE START -->
     <div class="herovideo">
-        <video class="video"> </video>
+        <video controls class="video"> </video>
         </div>
         
     <div class="fullscreen">
@@ -79,7 +79,7 @@
         <div class="mediumtext width25 ml60pc mtneg32point2 mb100"> <span class="invis">Friction</span>  drives our engagement.</div>
         <div class="mediumtext width25 ml60pc mb100"><span class="invis">Friction</span>, in this context, is not synonymous with either anger or conflict, nor is it malfunctioning technology. </div>
         <div class="mediumtext width25 ml60pc mb100"><span class="invis">Friction</span> is an essential ingredient that makes up our humanness and sparks human connection. </div>
-        <div class="mediumtext width40 ml60pc mb700"><span class="invis">Friction</span> is a <span class="clickable" onclick="makeBlack()"><em>lively, intrinsic experience</em></span>.</div>
+        <div class="mediumtext width40 ml60pc mb700"><span class="invis">Friction</span> is a <em>lively, intrinsic experience</em></span>.</div>
     </section>
 
     <div class="largetext ml3pc mt700">2. LOSS</div>
@@ -136,12 +136,12 @@
       });
     </script>   
     
-    <script>
+    <!-- <script>
         function makeBlack() {
         document.body.style.backgroundColor = 'black';
         document.body.style.color = 'white';
   }
-    </script>
+    </script> -->
 
 
 <script src="class-changes.js"></script>
