trying to fix horse gif size

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
 
     <div class="width25 overlay mediumtext aligncenter mt300 ml30pc">With movement comes friction. </div>
-    <div class="mt350 ml30pc">
+    <div class="mt350 ml30pc width80">
         <video class="hover-video" muted loop>
             <source src="video/horseloop.mp4" type="video/mp4">
           </video>
