fix proposal screen

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="fullscreen-opaque">
         <div class="titletext textcenter text-yellow stretchtexthalf">Designing Friction</div>
         <div class="overlay mlauto mrauto width60">
-            <div class="titlecaption text-black textjustifylast text-black hidden">A call for friction in digital culture</div>
+            <div class="titlecaption textjustifylast text-black hidden">A call for friction in digital culture</div>
         </div>
     </div>
 
@@ -73,7 +73,7 @@
     </div>
 
     <div class="width25 overlay mediumtext aligncenter mt300 ml30pc">With movement comes friction. </div>
-    <div class="mt350 ml30pc width80">
+    <div class="mt350 ml30pc">
         <video class="hover-video" muted loop>
             <source src="video/horseloop.mp4" type="video/mp4">
           </video>
@@ -100,7 +100,7 @@
 
     <div class="largetext ml3pc mt700 sticky-LOF">2. LOSS</div>
     <div class="largetext ml30pc mt50 sticky-LOF">OF</div>
-    <div class="largetext ml60pc mt100 sticky-LOF">FRICTION</div>
+    <div class="largetext ml60pc mt100 sticky-LOF redaction20"><i>FRICTION</i></div>
 
     <div class="mediumtext ml3pc width40 mt100">Digital technology has long pursued the goal of eliminating friction, striving for seamlessness. We now navigate a sea of frictionless experiences. (With the possible exception of two factor authentication.)</div>
    
@@ -125,7 +125,15 @@
         <br><br> Philosopher Miriam Rasch argues that complete removal of friction means standing still. A completely predictable future is no future, but a continuous present. In a world where even our deepest desires can be foreseen, where we have lost our autonomy, we long for what remains beyond the domain of data, algorithms and databases and AI.
     </div>
 
-<div class="proposaltitle stretchtextproposal textcenter proposalscreen">PROPOSAL</div>
+    <!-- <div class="overlay ml3pc mt200">
+        <div class="largetext">3.</div>
+    </div> -->
+    <div class="fullscreen">
+        <div class="textcenter proposaltitle"> PROPOSAL </div>
+    </div>
+ 
+
+<!-- <div class=" proposalscreen debug"><div class="stretchtextproposal proposaltitle textcenter">PROPOSAL</div></div> -->
 
     <!-- <div class="width80 mediumtext textindent"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto expedita numquam nisi officiis necessitatibus totam delectus impedit molestias quam. Tenetur cupiditate, fugit doloribus perferendis tempore quidem dolor provident eligendi obcaecati?</div> -->
 
