PROPOSAL now untimed, did layout for proposal body WOOHOO

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div class="scrollElement folio-middle textcenter" data-show="950" data-hide="100000">DESIGNING FRICTION</div>
     <div class="scrollElement folio-left" data-show="4500" data-hide="7450">1. WHAT IS FRICTION?</div>
     <div class="scrollElement folio-left" data-show="8850" data-hide="13900">2. LOSS OF FRICTION</div>
+    <div class="scrollElement folio-left" data-show="15600" data-hide="33900">3. PROPOSAL</div>
 
 
     <div class="fullscreen center">
@@ -164,6 +165,8 @@
         <div class="mediumtext ml3pc width40 mt50">In this reality, data is king. In creating convenience, all our actions are recorded and translated into data, rendering them readable and predictable. The better the data, the better the predictability. Unpredictability, human messiness and unforeseen actions are all friction, and counter this goal. Predictable futures can be controlled.
         </div>
 
+        <div class="imagepopup philosophersstone"><img src="images/philosphersstone.jpg" alt="Heinrich Khunrath's 'philosopher's stone'"/></div>
+
         <div class="imagepopup mannequins"><img src="images/mannequins.jpg" alt="manneuquins"/></div>
         <div class="imagepopup fellowhumans"><img src="images/wrestlingpeople.jpg" alt="wrestling statues"/></div>
     </div>
@@ -176,18 +179,27 @@
     </div>
 
     <div class="proposal-fullscreen">
-        <div class="textcenter proposaltitle"> PROPOSAL </div>
+        <div class="textcenter proposaltitle mt300"> PROPOSAL </div>
     </div>
 
-    <div class="fullscreen"></div>
+    <div class="mediumtext ml20pc mt400 width30">A world headed for a frictionless reality begs the question: </div>
+    <div class="mediumtext ml30pc width30 mt50"> how can we create a desirable future with digital technology?</div>
 
-    <div class="largetext ml3pc ">3. PROPOSAL</div>
-    <div class="mediumtext ml3pc mt100 width40">A world headed for a frictionless reality begs the question: how can we create a desirable future with digital technology? How can we access, develop and relate to it? We like to see designing friction as a fundamental design principle when working with digital culture. Instead of following design ethics that strive to eliminate friction, we suggest to not only allow, but embrace friction. To facilitate it: design [products with] digital technology in a way that makes space for our humanness. Here friction is a core ingredient. Digital technology should create environments and situations in which we can truly connect with each other, as well as with the unknown, the uncontrolled, with all senses, all elements, all emotions. It should create situations that are not predicted, measured and calculated beforehand; situations that result from and amount to the present moment.</div>
+    <div class="ml30pc mt10"> <img src="images/earthrot.gif" alt="earth spinning gif" class="earthrot"></div>
+
+    <div class="mediumtext ml30pc width35 mt20"> How can we access, develop and relate to it?</div>
+    <div class="mediumtext ml30pc width35 mt20"> We like to see designing friction as a fundamental design principle when working with digital culture.</div>
+    <div class="mediumtext ml30pc width35 mt20"> Instead of following design ethics that strive to eliminate friction, we suggest to not only allow, but embrace friction. To facilitate it: design [products with] digital technology in a way that makes space for our humanness.</div>
+
+    <div class="ml35pc mt10"><img src="images/dancingbaby.gif" alt="dancing baby gif" class="dancingbaby"></div>
+    <div class="mediumtext ml40pc width35 mt10">Here friction is a core ingredient. Digital technology should create environments and situations in which we can truly connect with each other, as well as with the unknown, the uncontrolled, with all senses, all elements, all emotions.</div>
+
+    <div class="mediumtext ml40pc width35 mt10">It should create situations that are not predicted, measured and calculated beforehand; <br>situations that result from <br>and amount to<br>the present <br>moment<br>.</div>
  
+    <div class="mediumtext biggerlineheight overlay ml45pc mt500 redaction20"><i>Here <br>are <br>some <br>ideas <br>on <br>what <br>‘designing <br>friction’ <br>might <br>entail.</i></div>
 
-<!-- <div class=" proposalscreen debug"><div class="stretchtextproposal proposaltitle textcenter">PROPOSAL</div></div> -->
-
-    <!-- <div class="width80 mediumtext textindent"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto expedita numquam nisi officiis necessitatibus totam delectus impedit molestias quam. Tenetur cupiditate, fugit doloribus perferendis tempore quidem dolor provident eligendi obcaecati?</div> -->
+    <div class="ml40point05pc verticalline"></div>
+    <div class="ml39point85pc arrow"></div>
 
     <!-- SCRIPTS AND VIDEO HOSTING -->
 
