change Sem 1 to sem1

--- a/styleguide.html
+++ b/styleguide.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<h1 class="text--mediumlarge">Style Guide</h1>
+    
 <div class="flex flex--rowgap">
     <div class="flex__item flex__item--width25"><h2 class="text--medium">Heading</h2></div>
     <div class="flex__item flex__item--width75"><h1 class="text--large">I dream of a blue and green planet</h1> </div>
