first big changes

--- a/sem2/index.html
+++ b/sem2/index.html
@@ -3,13 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>I Dream</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+
+
+<div class="full--viewheight padding--4remnobottom">
+    <div class="text--extralarge width--75pc">I dream of a blue and green planet</div>
+    <div class="position--absolute width--16pc planetposition"><img src="images/planet.jpg"></div>
+    <div class="position--absolute width--18pc starsposition"><img src="images/stars.jpg"></div>
+</div>
+
+<div class="pt--150px pb--50px bg--brown">
+    <div class="flex">
+        <div class="ml--5pc width--25pc"><img src="images/clouds.jpg"></div>
+        <div class="ml--35px width--25pc text--body text--green">White streams pool <br> in an ever-shifting flow atop its surface. <br> Each moment commemorated by the enduring undulations of that deep, abundant blue. <br> <span class= "text--indent">The light’s perpetual crawl washes across the sphere in equal measure as the mass turns, and turns, and turns.</span></div>
+    </div>
+
+    <div class="ml--50pc width--30pc mt--250px text--body text--green text--indent position--absolute">y informs the meeting between Green and Blue, where Green shifts and ripples almost in response to the fluctuation of Blue, but in more languid gradation.</div>
+    <div class="ml--60pc width--25pc mt--300px"><img src="images/lake.jpg"></div>
+
+    <div class="mt--200px m--centre width--25pc text--body text--green text--centrealign">Upon inspection,</div>
+</div>
+
+<section>
+
+    <div class="fullscreen bg--brown binocularmask"></div>
+
+    <div class="m--centre mt--neg500px width--10pc text--body text--centrealign">this sphere <br> strikes <br> an impossible equilibrium</div>
+
+    <div class="m--centre mt--500px width--20pc text--body text--centrealign">between the</div>
+    <div class="m--centre mt--50px width--20pc text--body text--justify"> vast and</div>
+
+    <div class="m--centre mt--30px width--25pc"><img src="images/window.jpg"></div>
+
+    <div class="m--centre mt--50px mb--400px width--20pc text--body text--centrealign">minute.</div>
+
+    <div class="fullscreen position--sticky position--top0 z--neg1">
+        <img src="images/suburbcamcrop.png">
+    </div>
+
+    <div class="ml--15pc mt--neg700px width--25pc text--body text--centrealign">Vastness is made apparent through closeness.</div>
+    <div class="ml--15pc mt--700px width--25pc text--body text--centrealign">Masses of Green conceal the abundance of rich hues, shapings, and patterns that comprise it.</div>
+    <div class="ml--15pc mt--700px width--25pc text--body ">Trails unravel in accordance with the ebb and flow of matter, until suddenly,</div>
+    <div class="ml--15pc mt--300px width--25pc text--body text--centrealign">miraculously,</div>
+    <div class="ml--20pc mt--400px width--25pc text--body text--centrealign">there they are.</div>
+
+    <div class="mt--600px">.</div>
+
+</section>
+
+<div class="pt--300px pb--200px bg--brown position--relative">
+    <div class="ml--10pc width--25pc text--body text--beige">At light’s touch, they emerge into the open, populating the open space and the Green becomes alive. </div>
+    <div class="ml--20pc mt--300px width--20pc text--body text--beige z--1 position--relative">Small forms bloom and </div>
+    <div class="ml--25pc width--20pc text--body text--beige z--1 position--relative">follow the light as it travels.</div>
+    <div class="position--absolute position--absolute--centred width--50pc"><img src="images/suncam.jpg"></div>
+    <div class="fullscreen"></div>
+</div>
+
+</div>
+
+
+
+<!-- <div class="fullscreen overflowhidden"> <img src="images/beachcam.jpg"></div> -->
+
     
-    <h1 class="text--large">I dream of a blue and green planet</h1>
-
-
 </body>
 </html>
