--- a/sem2/styleguide.html
+++ b/sem2/styleguide.html
@@ -11,21 +11,21 @@
 <h1 class="text--mediumlarge">Style Guide</h1>
     
 <div class="flex flex--rowgap">
-    <div class="flex__item flex__item--width25"><h2 class="text--medium">Heading</h2></div>
-    <div class="flex__item flex__item--width75"><h1 class="text--large">I dream of a blue and green planet</h1> </div>
+    <div class="flex__item width--25"><h2 class="text--medium">Heading</h2></div>
+    <div class="flex__item width--75"><h1 class="text--large">I dream of a blue and green planet</h1> </div>
 
-   <div class="flex__item flex__item--width25"><h2 class="text--medium">Body</h2></div>
-   <div class="flex__item flex__item--width75">
+   <div class="flex__item width--25"><h2 class="text--medium">Body</h2></div>
+   <div class="flex__item width--75">
         <p class="text--body">White streams pool in an ever-shifting flow atop its surface. Each moment commemorated by the enduring undulations of that deep, abundant blue. The light's perpetual crawl washes across the sphere in equal measure as the mass turns, and turns, and turns. Irregularity informs the meeting between Green and Blue, where Green shifts and ripples almost in response to the fluctuation of Blue, but in more languid gradation.</p>
         <p class="text--body">Upon inspection, this sphere strikes an impossible equilibrium between the vast and minute. Vastness is made apparent through closeness. Masses of Green conceal the abundance of rich hues, shapings, and patterns that comprise it. Trails unravel in accordance with the ebb and flow of matter, until suddenly, miraculously, there they are.</p>
         <p class="text--body">At light’s touch, they emerge into the open, populating the open space and the Green becomes alive. Small forms bloom and follow the light as it travels. Here, in this short time where the light lays, I watch them travel, consume, converse, and I wonder how it would be. I feel, achingly, the untraversable distance between being and watching. I feel it in the steps they take with their limbs, in the unknowable scent of morning liquids they consume, in the bodily movements they exhibit when interacting with another.</p>
         </div>
 
-    <div class="flex__item flex__item--width25"><h2 class="text--medium">Colour Palette</h2></div>
-    <div class="flex flex--columngap flex__item flex__item--width75">
-        <div class="swatch bg-green border"></div>
-        <div class="swatch bg-brown border"></div>
-        <div class="swatch bg-beige border"></div>
+    <div class="flex__item width--25"><h2 class="text--medium">Colour Palette</h2></div>
+    <div class="flex flex--columngap flex__item width--75">
+        <div class="swatch bg--green border"></div>
+        <div class="swatch bg--brown border"></div>
+        <div class="swatch bg--beige border"></div>
     </div>
 
 
