adding clock & attempt at changing clock text colour based on bg

--- a/sem2/index.html
+++ b/sem2/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-
+<div class="ml--auto width--5pc"><div id="clock" class="clock text--body position--fixed display--block"></div></div>
 
 <div class="full--viewheight padding--4remnobottom">
     <div class="text--extralarge width--75pc">I dream of a blue and green planet</div>
@@ -16,7 +16,7 @@
     <div class="position--absolute width--18pc starsposition"><img src="images/stars.jpg"></div>
 </div>
 
-<div class="pt--150px pb--50px bg--brown">
+<div class="pt--150px pb--50px bg--brown clock--colourchange">
     <div class="flex">
         <div class="ml--5pc width--25pc"><img src="images/clouds.jpg"></div>
         <div class="ml--35px width--25pc text--body text--green">White streams pool <br> in an ever-shifting flow atop its surface. <br> Each moment commemorated by the enduring undulations of that deep, abundant blue. <br> <span class= "text--indent">The light’s perpetual crawl washes across the sphere in equal measure as the mass turns, and turns, and turns.</span></div>
@@ -28,34 +28,34 @@
     <div class="mt--200px m--centre width--25pc text--body text--green text--centrealign">Upon inspection,</div>
 </div>
 
-<section>
+<section class="clock--colourchange">
 
     <div class="fullscreen bg--brown binocularmask"></div>
 
-    <div class="m--centre mt--neg500px width--10pc text--body text--centrealign">this sphere <br> strikes <br> an impossible equilibrium</div>
+    <div class="m--centre mt--neg500px width--10pc text--body text--centrealign text--body--timesoverride">this sphere <br> strikes <br> an impossible equilibrium</div>
 
-    <div class="m--centre mt--500px width--20pc text--body text--centrealign">between the</div>
-    <div class="m--centre mt--50px width--20pc text--body text--justify"> vast and</div>
+    <div class="m--centre mt--500px width--20pc text--body text--centrealign text--body--timesoverride">between the</div>
+    <div class="m--centre mt--50px width--20pc text--body text--justify text--body--timesoverride"> vast and</div>
 
     <div class="m--centre mt--30px width--25pc"><img src="images/window.jpg"></div>
 
-    <div class="m--centre mt--50px mb--400px width--20pc text--body text--centrealign">minute.</div>
+    <div class="m--centre mt--50px mb--400px width--20pc text--body text--centrealign text--body--timesoverride">minute.</div>
 
     <div class="fullscreen position--sticky position--top0 z--neg1">
         <img src="images/suburbcamcrop.png">
     </div>
 
-    <div class="ml--15pc mt--neg700px width--25pc text--body text--centrealign">Vastness is made apparent through closeness.</div>
-    <div class="ml--15pc mt--700px width--25pc text--body text--centrealign">Masses of Green conceal the abundance of rich hues, shapings, and patterns that comprise it.</div>
-    <div class="ml--15pc mt--700px width--25pc text--body ">Trails unravel in accordance with the ebb and flow of matter, until suddenly,</div>
-    <div class="ml--15pc mt--300px width--25pc text--body text--centrealign">miraculously,</div>
-    <div class="ml--20pc mt--400px width--25pc text--body text--centrealign">there they are.</div>
+    <div class="ml--15pc mt--neg700px width--25pc text--body text--centrealign text--body--timesoverride">Vastness is made apparent through closeness.</div>
+    <div class="ml--15pc mt--700px width--25pc text--body text--centrealign text--body--timesoverride">Masses of Green conceal the abundance of rich hues, shapings, and patterns that comprise it.</div>
+    <div class="ml--15pc mt--700px width--25pc text--body text--body--timesoverride">Trails unravel in accordance with the ebb and flow of matter, until suddenly,</div>
+    <div class="ml--15pc mt--300px width--25pc text--body text--centrealign text--body--timesoverride">miraculously,</div>
+    <div class="ml--20pc mt--400px width--25pc text--body text--centrealign text--body--timesoverride">there they are.</div>
 
     <div class="mt--600px">.</div>
 
 </section>
 
-<div class="pt--300px pb--200px bg--brown position--relative">
+<div class="pt--300px pb--200px bg--brown position--relative clock--colourchange">
     <div class="ml--10pc width--25pc text--body text--beige">At light’s touch, they emerge into the open, populating the open space and the Green becomes alive. </div>
     <div class="ml--20pc mt--300px width--20pc text--body text--beige z--1 position--relative">Small forms bloom and </div>
     <div class="ml--25pc width--20pc text--body text--beige z--1 position--relative">follow the light as it travels.</div>
@@ -63,12 +63,85 @@
     <div class="fullscreen"></div>
 </div>
 
+<div class="fullscreen"></div>
+<div class="fullscreen"></div>
+<div class="fullscreen"></div>
+<div class="fullscreen"></div>
+
 </div>
 
 
 
 <!-- <div class="fullscreen overflowhidden"> <img src="images/beachcam.jpg"></div> -->
 
+<script>
+(function () {
+
+  var clockElement = document.getElementById( "clock" );
+
+  function updateClock ( clock ) {
+    clock.innerHTML = new Date().toLocaleTimeString();
+  }
+
+  setInterval(function () {
+      updateClock( clockElement );
+  }, 1000);
+
+}());
+
+document.addEventListener('DOMContentLoaded', () => {
+
+const sectionsBrown = document.querySelectorAll('.clock--colourchange')
+const clock = document.querySelector("#clock")
+
+
+// const observer = new IntersectionObserver(entries => {
+//     entries.forEach(entry => {
+//         if (entry.isIntersecting) {
+//             console.log('inside')
+//             clock.classList.add('clock--green')
+//             // clock.classList.remove('clock--brown')
+//         } else {
+//             console.log('outside')
+//             clock.classList.remove('clock--green')
+//             // clock.classList.add('clock--green')
+//         }
+//     })
+// }, {
+//     threshold: 0.1,
+// })
+
+// sectionsBrown.forEach(section => observer.observe(section))
+
+
+for (const section of sectionsBrown) {    
+    window.addEventListener('scroll', () => {
+
+            const topOfSection = section.offsetTop
+            const bottomOfSection = section.offsetHeight + section.offsetTop
+            // const clockPosition = clock.offsetTop
+            const amountScrolled = window.scrollY
+
+        // console.log('clock position:', clockPosition)
+        console.log('top of section:', topOfSection)
+        console.log('bottom of section:', bottomOfSection)
+        console.log('scrolled:', amountScrolled)
+
+        if (amountScrolled > topOfSection && amountScrolled < bottomOfSection) {
+            // console.log('The clock is inside a colourchange div/section')
+            clock.classList.add('clock--green')
+            clock.classList.remove('clock--brown')
+        } else {
+            // console.log('The clock is outside a colourchange div/section')
+            clock.classList.add('clock--brown')
+            clock.classList.remove('clock--green')
+        }   
+    })}
+})
+
+
+
+</script>
     
 </body>
 </html>
