--- a/sem2/index.html
+++ b/sem2/index.html
@@ -74,21 +74,85 @@
 		</section>
 
 		<div class="pt--300px pb--200px bg--brown position--relative clock--colourchange">
-			<div class="ml--10pc width--25pc text--body text--beige">
-				At light’s touch, they emerge into the open, populating the open space and the Green becomes alive.
+			<div class="ml--10pc width--25pc text--body text--beige">At light’s touch, they emerge into the open, populating the open space and the Green becomes alive.</div>
+			<div class="position--absolute position--absolute--t60pcl50pc"><img src="images/suncam.jpg"/></div>
+			<div class="ml--20pc mt--300px width--20pc text--body text--beige position--relative">Small forms bloom and</div>
+			<div class="ml--25pc width--20pc text--body text--beige position--relative">follow the light as it travels.</div>
+			<div class="ml--60pc pt--100px width--20pc text--body text--beige position--relative"> Here, in this short time where the light lays, I watch them travel, consume, converse, and I wonder how it would be.</div>
+			<div class="ml--30pc pt--50px width--20pc text--body text--beige position--relative">I feel, achingly, the untraversable distance between being and watching.</div>
+			<div class="ml--60pc pt--100px width--20pc text--body text--beige position--relative">I feel it in the steps they take with their limbs, in the unknowable scent of morning liquids they consume, in the bodily movements they exhibit when interacting with another.</div>
+			<div class="ml--15pc width--18pc text--body text--beige text--body--timesoverride text--justify position--relative">Country Netherlands <br>Region Groningen <br>City Leek <br>Latitude 53.162500 <br>Longitude 6.376390 <br>ZIP 9351 <br>Timezone +01:00</div>
+		</div>
+		<div class="bg--brown clock--colourchange">
+			<div class="ml--20pc width--18pc text--body text--beige  position--relative">Another – what could that be?</div>
+			<div class="ml--40pc mt--100px width--18pc text--body text--beige position--relative">To exist, together</div>
+			<div class="ml--60pc mt--50px width--30pc position--relative flex">
+				<img class="image--opacityhoverchange z--1"src="images/heavensgategroup.jpg">
+				<div class="position--absolute position--absolute--t50pcl50pc text--body text--body--timesoverride text--centrealign text--beige">Such distance between them and the stars, they don't know how together they are on this lonely planet.</div>
 			</div>
-			<div class="ml--20pc mt--300px width--20pc text--body text--beige z--1 position--relative">Small forms bloom and</div>
-			<div class="ml--25pc width--20pc text--body text--beige z--1 position--relative">follow the light as it travels.</div>
-			<div class="position--absolute position--absolute--centred width--50pc"><img src="images/suncam.jpg" /></div>
-			<div class="fullscreen"></div>
+			<div class="ml--60pc mt--50px width--30pc"> <div class="width--60pc text--centrealign text--body text--beige m--centre">How exhilarating, to enter the light, into the world and know there are others like them to see and be seen by. <br><br> To feel air against your flesh, to meet eye to eye.</div></div>
+			<div class="m--centre mt--500px width--30pc"><img src="images/haleboppbeige.jpg"></div>
+			
+			<div class="fullscreen bg-brown"></div>
 		</div>
 
+
+
 		<div class="fullscreen"></div>
 		<div class="fullscreen"></div>
 		<div class="fullscreen"></div>
 		<div class="fullscreen"></div>
 
+				<!-- junkyard -->
+
+		<!-- Country Netherlands <br>Region Groningen <br>City Leek <br>Latitude 53.162500 <br>Longitude 6.376390 <br>ZIP 9351 <br>Timezone +01:00 -->
 		<!-- <div class="fullscreen overflowhidden"> <img src="images/beachcam.jpg"></div> -->
+
+		<!-- <script>
+		// set up text to print, each item in array is new line
+		var aText = new Array(
+		"Country:  Netherlands",
+		"Region:  Groningen",
+		"City:  Leek",
+		"Latitude:  53.162500",
+		"Longitude:  6.376390",
+		"ZIP:  9351",
+		"Timezone:  +01:00"
+		);
+		var iSpeed = 100; // time delay of print out
+		var iIndex = 0; // start printing array at this position
+		var iArrLength = aText[0].length; // the length of the text array
+		var iScrollAt = 100; // start scrolling up at this many lines
+		
+		var iTextPos = 0; // initialise text position
+		var sContents = ''; // initialise contents variable
+		var iRow; // initialise current row
+		
+		function typewriter()
+		{
+		sContents =  ' ';
+		iRow = Math.max(0, iIndex-iScrollAt);
+		var destination = document.getElementById("typedtext");
+		
+		while ( iRow < iIndex ) {
+		sContents += aText[iRow++] + '<br />';
+		}
+		destination.innerHTML = sContents + aText[iIndex].substring(0, iTextPos) + "_";
+		if ( iTextPos++ == iArrLength ) {
+		iTextPos = 0;
+		iIndex++;
+		if ( iIndex != aText.length ) {
+		iArrLength = aText[iIndex].length;
+		setTimeout("typewriter()", 500);
+		}
+		} else {
+		setTimeout("typewriter()", iSpeed);
+		}
+		}
+
+
+		typewriter();
+		</script> -->
 
 	</body>
 </html>
