adjust text size and widths of stuff for default size view

--- a/sem2/index.html
+++ b/sem2/index.html
@@ -74,13 +74,13 @@
 		</section>
 
 		<div class="pt--300px pb--200px bg--brown position--relative clock--colourchange">
-			<div class="ml--10pc width--25pc text--body text--beige">At light’s touch, they emerge into the open, populating the open space and the Green becomes alive.</div>
+			<div class="ml--10pc width--30pc text--body text--beige">At light’s touch, they emerge into the open, populating the open space and the Green becomes alive.</div>
 			<div class="position--absolute position--absolute--t60pcl50pc"><img src="images/suncam.jpg"/></div>
-			<div class="ml--20pc mt--300px width--20pc text--body text--beige position--relative">Small forms bloom and</div>
+			<div class="ml--20pc mt--200px width--20pc text--body text--beige position--relative">Small forms bloom and</div>
 			<div class="ml--25pc width--20pc text--body text--beige position--relative">follow the light as it travels.</div>
-			<div class="ml--60pc pt--100px width--20pc text--body text--beige position--relative"> Here, in this short time where the light lays, I watch them travel, consume, converse, and I wonder how it would be.</div>
-			<div class="ml--30pc pt--50px width--20pc text--body text--beige position--relative">I feel, achingly, the untraversable distance between being and watching.</div>
-			<div class="ml--60pc pt--100px width--20pc text--body text--beige position--relative">I feel it in the steps they take with their limbs, in the unknowable scent of morning liquids they consume, in the bodily movements they exhibit when interacting with another.</div>
+			<div class="ml--50pc mt--100px width--30pc text--body text--beige position--relative"> Here, in this short time where the light lays, I watch them travel, consume, converse, and I wonder how it would be.</div>
+			<div class="ml--20pc mt--20px width--25pc text--body text--beige position--relative">I feel, achingly, the untraversable distance between being and watching.</div>
+			<div class="ml--60pc mt--50px width--25pc text--body text--beige position--relative">I feel it in the steps they take with their limbs, in the unknowable scent of morning liquids they consume, in the bodily movements they exhibit when interacting with another.</div>
 			<div class="ml--15pc width--18pc text--body text--beige text--body--timesoverride text--justify position--relative">Country Netherlands <br>Region Groningen <br>City Leek <br>Latitude 53.162500 <br>Longitude 6.376390 <br>ZIP 9351 <br>Timezone +01:00</div>
 		</div>
 		<div class="bg--brown clock--colourchange">
@@ -90,7 +90,7 @@
 				<img class="image--opacityhoverchange z--1"src="images/heavensgategroup.jpg">
 				<div class="position--absolute position--absolute--t50pcl50pc text--body text--body--timesoverride text--centrealign text--beige">Such distance between them and the stars, they don't know how together they are on this lonely planet.</div>
 			</div>
-			<div class="ml--60pc mt--50px width--30pc"> <div class="width--60pc text--centrealign text--body text--beige m--centre">How exhilarating, to enter the light, into the world and know there are others like them to see and be seen by. <br><br> To feel air against your flesh, to meet eye to eye.</div></div>
+			<div class="ml--60pc mt--50px width--30pc"> <div class="width--75pc text--centrealign text--body text--beige m--centre">How exhilarating, to enter the light, into the world and know there are others like them to see and be seen by. <br><br> To feel air against your flesh, to meet eye to eye.</div></div>
 			<div class="m--centre mt--500px width--30pc"><img src="images/haleboppbeige.jpg"></div>
 			
 			<div class="fullscreen bg-brown"></div>
