--- a/sem2/index.html
+++ b/sem2/index.html
@@ -30,7 +30,7 @@
 			</div>
 
 			<div class="ml--50pc width--30pc mt--250px text--body text--green text--indent position--absolute">
-				y informs the meeting between Green and Blue, where Green shifts and ripples almost in response to the fluctuation of Blue, but in more
+				Irregularity informs the meeting between Green and Blue, where Green shifts and ripples almost in response to the fluctuation of Blue, but in more
 				languid gradation.
 			</div>
 			<div class="ml--60pc width--25pc mt--300px"><img src="images/lake.jpg" /></div>
@@ -81,27 +81,56 @@
 			<div class="ml--50pc mt--100px width--30pc text--body text--beige position--relative"> Here, in this short time where the light lays, I watch them travel, consume, converse, and I wonder how it would be.</div>
 			<div class="ml--20pc mt--20px width--25pc text--body text--beige position--relative">I feel, achingly, the untraversable distance between being and watching.</div>
 			<div class="ml--60pc mt--50px width--25pc text--body text--beige position--relative">I feel it in the steps they take with their limbs, in the unknowable scent of morning liquids they consume, in the bodily movements they exhibit when interacting with another.</div>
-			<div class="ml--15pc width--18pc text--body text--beige text--body--timesoverride text--justify position--relative">Country Netherlands <br>Region Groningen <br>City Leek <br>Latitude 53.162500 <br>Longitude 6.376390 <br>ZIP 9351 <br>Timezone +01:00</div>
+			<div class="ml--15pc width--18pc text--body text--beige text--body--timesoverride text--justify position--relative">Country Netherlands <br>Region Groningen <br>City Leek <br>Latitude 33.021111 <br>Longitude 117.200278 <br>ZIP 92067 <br>Timezone −08:00</div>
 		</div>
-		<div class="bg--brown clock--colourchange">
+		<div class="bg--brown clock--colourchange pb--200px">
 			<div class="ml--20pc width--18pc text--body text--beige  position--relative">Another – what could that be?</div>
 			<div class="ml--40pc mt--100px width--18pc text--body text--beige position--relative">To exist, together</div>
 			<div class="ml--60pc mt--50px width--30pc position--relative flex">
 				<img class="image--opacityhoverchange z--1"src="images/heavensgategroup.jpg">
 				<div class="position--absolute position--absolute--t50pcl50pc text--body text--body--timesoverride text--centrealign text--beige">Such distance between them and the stars, they don't know how together they are on this lonely planet.</div>
 			</div>
-			<div class="ml--60pc mt--50px width--30pc"> <div class="width--75pc text--centrealign text--body text--beige m--centre">How exhilarating, to enter the light, into the world and know there are others like them to see and be seen by. <br><br> To feel air against your flesh, to meet eye to eye.</div></div>
-			<div class="m--centre mt--500px width--30pc"><img src="images/haleboppbeige.jpg"></div>
+			<div class="ml--60pc mt--50px width--30pc z--2 position--relative"> <div class="width--75pc text--centrealign text--body text--beige m--centre">How exhilarating, to enter the light, into the world and know there are others like them to see and be seen by. <br><br> To feel air against your flesh, to meet eye to eye.</div></div>
 			
-			<div class="fullscreen bg-brown"></div>
+			<div class="position--relative mt--neg500px">
+				<div class="svgfilter--green z--1 position--relative pointerevents--none"><img src="images/dots.svg"></div>
+				<div class="position--absolute position--absolute--t60pcl50pc"> <img src="images/churchcam.jpg"></div>
+				<div class="ml--15pc mt--neg1000px width--18pc text--body text--beige text--body--timesoverride text--justify position--relative">Country USA <br>Region California <br>City San Diego <br>Latitude 53.162500 <br>Longitude 6.376390 <br>ZIP 9351 <br>Timezone +01:00</div>
+			</div>
+			
+
+			<div class="m--centre mt--300px text--centrealign text--body text--beige width--20pc">I hear they dream of the infinite outer world</div>
+			<div class="m--centre mt--50px width--30pc"><img src="images/haleboppbeige.jpg"></div>
+			<div class="m--centre mt--50px text--centrealign text--body text--beige width--20pc">make grand attempts to traverse this barren expanse.</div>
+			
+			<div class="ml--10pc mt--300px width--25pc text--body text--beige">How many are there overlooking the terrain they were gifted?</div>
+			<div class="ml--20pc mt--100px width--25pc text--body text--beige">Spending their finite existence ruminating on the perceived despicable nature of the other, or the world itself?</div>
+			<div class="ml--30pc mt--100px width--25pc text--body text--beige">It occurs to me that it does their kind no service to exist among these types.</div>
+			<div class="m--centre mt--100px width--25pc text--body text--beige">How much better if instead, a being knowing the scope of grand existence lived among them?</div>
+			<div class="m--centre mt--300px width--35pc text--medium text--beige text--centrealign">Attitudes traverse through the minds of these beings like a contagion. <br> Why not for their betterment?</div>
+
+			<div class="position--relative mt--500px">
+			<div class="ml--20pc width--25pc text--body text--beige position--relative z--1">Observation has shown existential pessimism has grown rampant among these beings.</div>
+			<div class="ml--50pc width--30pc text--body text--beige position--relative z--1">For some, the prospect of the unknown expanse is deemed more alluring than the planet in which they exist.</div>
+				<div class="position--absolute position--absolute--t50pcl50pc"><img src="images/ripples.jpg"></div>
+			<div class="ml--15pc mt--100px width--18pc text--body text--beige text--body--timesoverride text--justify position--relative">Country Canada<br>Region Ontario <br>City Sioux-Narrows <br>Latitude 35.6422 <br>Longitude 98.11092 <br>ZIP P0X0A4 <br>Timezone −05:00</div>
+			<div class="ml--40pc mt--neg50px width--30pc text--body text--beige position--relative z--1">These are prime targets. <br>Beings who have foregone the abundance in their lives in favour of the unknown other. </div>
+			</div>
+
+			<div class="m--centre mt--300px width--50pc text--body text--beige text--centrealign">It won't be long now before the targets are successfully converted. Guilt for their departure resides within me, deep and unyielding, yet my conviction remains undisturbed. <br> <br>I have watched them for long enough. It's my turn now to see the light – not as it casts broadly atop an untouchable surface, but to watch it rise across the horizon of this planet, to feel it on my flesh and know there is something to exist for.</div>
 		</div>
 
+		<div class="pt--100px bg--beige pb--100px position--relative">
+			<div class="position--absolute position--absolute--t50pcl50pc text--medium text--beige text--centrealign z--2">It's my turn to live, <br>and I can barely wait.</div>
+			<div class="m--centre width--60pc"><img src="images/fields.jpg"></div>
+		</div>
 
-
-		<div class="fullscreen"></div>
-		<div class="fullscreen"></div>
-		<div class="fullscreen"></div>
-		<div class="fullscreen"></div>
+		<div class="bg--beige">
+			<div class="pt--400px m--centre width--50pc text--body text--body--timesoverride text--centrealign pb--200px"><i>I dream of a blue and green planet</i><br><br>is a speculative website created in memory of those lost in the 1997 Heavens Gate mass suicides, as part of Uriah Gray’s CDS3002 Future Communications unit at Monash University.
+					<br> <br> Images sourced from Internet Archive & insecam.org.
+					<br> <br> Designed by Jennifer Chen
+					<br> <br> Oct 2025</div>
+		</div>
 
 				<!-- junkyard -->
 
